@@ -3,6 +3,9 @@
 # Plugin to monitor the number of open files in the system.
 #
 # $Log$
+# Revision 1.4  2004/12/22 21:21:18  jimmyo
+# Cleaned up generic/samba a bit (SF#1087961).
+#
 # Revision 1.3  2004/05/20 19:02:36  jimmyo
 # Set categories on a bunch of plugins
 #
@@ -33,7 +36,7 @@
 
 
 if [ "$1" = "autoconf" ]; then
-	if [ -x /usr/sbin/lsof ]; then
+	if [ -x /usr/bin/smbstatus ]; then
 		echo yes
 		exit 0
 	else
@@ -51,7 +54,8 @@ if [ "$1" = "config" ]; then
 	echo 'proc.label processes'
 	echo 'lock.label locked files'
 	echo 'share.label Open shares'
-	echo hei | awk  '{printf "max.warning %d\nmax.critical %d\n",900,960}'
+	echo 'max.warning 900'
+	echo 'max.critical 960'
 	exit 0
 fi
 
